09-saga/k8s/02-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: arch-course
  name: order
  labels:
    app: order
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: klwxsrx/arch-course-labs-09-order-service
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: arch-course
  name: payment
  labels:
    app: payment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: klwxsrx/arch-course-labs-09-payment-service
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: arch-course
  name: warehouse
  labels:
    app: warehouse
spec:
  replicas: 2
  selector:
    matchLabels:
      app: warehouse
  template:
    metadata:
      labels:
        app: warehouse
    spec:
      containers:
        - name: warehouse
          image: klwxsrx/arch-course-labs-09-warehouse-service
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: arch-course
  name: delivery
  labels:
    app: delivery
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
        - name: delivery
          image: klwxsrx/arch-course-labs-09-delivery-service
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
